# backend

./: .gitignore  Cargo.toml  README.md
lexicons/gg/campground/actor/: defs.json  profile.json  profileActivity.json
lexicons/gg/campground/socials/: defs.json
libs/campground-lexicon/: Cargo.toml
libs/campground-lexicon/src/: lib.rs
libs/campground-lexicon/src/gg/: mod.rs
libs/campground-lexicon/src/gg/campground/: actor.rs  mod.rs  socials.rs
libs/database/: database.go  go.mod  go.sum  models.go
libs/deadpool-surrealdb/: Cargo.toml  LICENSE.md
libs/deadpool-surrealdb/src/: lib.rs
libs/did-method-plc/: Cargo.toml  README.md
libs/did-method-plc/src/: audit.rs  error.rs  keypair.rs  lib.rs  multicodec.rs  op_builder.rs  operation.rs  util.rs
libs/rsky-lexicon/: README.md
libs/rsky-lexicon/src/app/bsky/: actor.rs
libs/rsky-lexicon/src/app/bsky/embed/: external.rs  images.rs  record.rs  video.rs
libs/rsky-lexicon/src/app/bsky/feed/: mod.rs
libs/rsky-lexicon/src/app/bsky/graph/: mod.rs
libs/rsky-lexicon/src/app/bsky/labeler/: mod.rs
libs/rsky-lexicon/src/chat/bsky/actor/: mod.rs
libs/rsky-lexicon/src/chat/bsky/convo/: mod.rs
services/discovery/: Cargo.toml  Dockerfile  Rocket.example.toml  diesel.toml
services/discovery/src/: config.rs  main.rs
services/discovery/src/database/: mod.rs
services/guild/: go.mod  go.sum
services/registry/: .surrealdb  Cargo.toml  Dockerfile  README.md  Rocket.example.toml  diesel.toml  go.mod  go.sum  lexicons.go  main.go  xrpc.go
services/registry/.cargo/: config.toml
services/registry/db/schemas/: account.surql  repo.surql
services/registry/migrations/2024-10-26-130704_registry_init/: down.sql  up.sql
services/registry/migrations/2024-10-27-085418_add_email_token/: down.sql  up.sql
services/registry/src/: auth_verifier.rs  config.rs  context.rs  internal.rs  main.rs  pipethrough.rs  schema.rs  well_known.rs  xrpc.rs
services/registry/src/account_manager/: mod.rs
services/registry/src/account_manager/helpers/: account.rs  auth.rs  email_token.rs  mod.rs  password.rs  repo.rs
services/registry/src/api/: mod.rs
services/registry/src/api/app/bsky/: mod.rs  util.rs
services/registry/src/api/app/bsky/actor/: get_preferences.rs  get_profile.rs  get_profiles.rs  mod.rs  put_preferences.rs
services/registry/src/api/app/bsky/feed/: get_actor_likes.rs  get_author_feed.rs  get_feed.rs  get_post_thread.rs  get_timeline.rs  mod.rs
services/registry/src/api/app/bsky/notification/: mod.rs  register_push.rs
services/registry/src/api/chat/: mod.rs
services/registry/src/api/chat/bsky/: mod.rs
services/registry/src/api/com/: mod.rs
services/registry/src/api/com/atproto/: mod.rs
services/registry/src/api/com/atproto/admin/: delete_account.rs  get_account_info.rs  get_subject_status.rs  mod.rs  send_email.rs  update_account_email.rs  update_account_handle.rs  update_account_password.rs  update_subject_status.rs
services/registry/src/api/com/atproto/identity/: mod.rs  resolve_handle.rs  update_handle.rs
services/registry/src/api/com/atproto/repo/: apply_writes.rs  create_record.rs  delete_record.rs  describe_repo.rs  get_record.rs  import_repo.rs  list_missing_blobs.rs  list_records.rs  mod.rs  put_record.rs  upload_blob.rs
services/registry/src/api/com/atproto/server/: activate_account.rs  check_account_status.rs  confirm_email.rs  create_account.rs  create_app_password.rs  create_session.rs  deactivate_account.rs  delete_account.rs  delete_session.rs  describe_server.rs  get_account_invite_codes.rs  get_service_auth.rs  get_session.rs  list_app_passwords.rs  mod.rs  refresh_session.rs  request_account_delete.rs  request_email_confirmation.rs  request_email_update.rs  request_password_reset.rs  reserve_signing_key.rs  reset_password.rs  revoke_app_password.rs  update_email.rs
services/registry/src/api/com/atproto/sync/: get_blob.rs  get_blocks.rs  get_latest_commit.rs  get_record.rs  get_repo.rs  get_repo_status.rs  list_blobs.rs  list_repos.rs  mod.rs  subscribe_repos.rs
services/registry/src/common/: mod.rs
services/registry/src/database/: mod.rs  models.rs
services/registry/src/handle/: explicit_slurs.rs  mod.rs  reserved.rs  reserved_handles.txt
services/registry/src/mailer/: mod.rs  moderation.rs
services/registry/src/plc/: mod.rs  operations.rs  types.rs
services/registry/src/read_after_write/: mod.rs  types.rs  util.rs  viewer.rs
services/registry/src/repository/: blob.rs  block_map.rs  commit.rs  data_diff.rs  mod.rs  mst.rs  record_key.rs  tid.rs  util.rs
services/registry/src/repository/aws/: s3.rs
services/registry/src/repository/mst/: diff.rs  mod.rs  util.rs  walker.rs
services/registry/src/repository/preference/: mod.rs  util.rs
services/registry/src/repository/record/: mod.rs
services/registry/src/repository/storage/: memory.rs  mod.rs  postgres.rs  surreal.rs
services/registry/src/repository/sync/: provider.rs
services/registry/src/sequencer/: events.rs  mod.rs  outbox.rs
services/registry/src/xrpc/: auth.rs  guards.rs  jwt.rs  mod.rs  types.rs
services/registry/templates/: admin_email.html  confirm_email.html  delete_account.html  password_reset.html  update_email.html
