[package]
name = "deadpool-surrealdb"
version = "0.1.2"
authors = ["Team Campground"]
edition = "2021"
description = "Dead simple async pool for surrealdb"
keywords = ["async", "database", "pool", "surrealdb"]
repository = "https://github.com/Project-Campground/backend/"
homepage = "https://github.com/Project-Campground/backend/tree/main/libs/deadpool-surrealdb/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_db_pools = { version = "0.2.0", optional = true}
rocket = { version = "0.5.1", optional = true }
serde_json = "1.0.118"
deadpool = { version = "0.12.1", features = ["rt_tokio_1"]}
surrealdb = "1.5.3"
serde = "1.0.203"

[dev-dependencies]
actix-rt = "2.10.0"

[features]
default = ["rocket"]
rocket = ["dep:rocket_db_pools", "dep:rocket"]
