[package]
name = "did-method-plc"
version = "0.2.0"
authors = ["Team Campground"]
edition = "2021"
keywords = ["ssi", "did"]
categories = ["web-programming::http-client"]
description = "did:plc DID method, using the ssi crate"
repository = "https://github.com/Project-Campground/backend/"
homepage = "https://github.com/Project-Campground/backend/tree/main/libs/did-method-plc/"
license = "MIT"

[dependencies]
multihash-codetable = { version = "0.1.3", features = ["sha2"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde_ipld_dagcbor = "0.6.1"
unsigned-varint = "0.8.0"
async-trait = "0.1.80"
serde_json = "1.0.118"
thiserror = "1.0.61"
ssi-core = "0.1.0"
multibase = "0.9"
base64 = "0.22.1"
anyhow = "1.0.86"
serde = "1.0.203"
chrono = "0.4.38"
base32 = "0.5.0"
didkit = "0.6.0"
ecdsa = "0.16.9"
sha2 = "0.10.8"
p256 = "0.13.2"
k256 = "0.13.3"
sec1 = "0.7.3"
rand = "0.8.5"
cid = "0.11.1"
hex = "0.4.3"

[dev-dependencies]
actix-rt = "2.10.0"
