[package]
name = "discovery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb-migrations = "2.0.0"
serde_json = "1.0.118"
surreal_bb8 = "0.1.0"
include_dir = "0.7.3"
thiserror = "1.0.61"
surrealdb = "2.0.4"
serde = "1.0.203"
rocket = "0.5.1"
