[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deadpool-surrealdb = { version = "*", path = "../../libs/deadpool-surrealdb" }
did-method-plc = { version = "*", path = "../../libs/did-method-plc" }
multihash-codetable = { version = "0.1.3", features = ["sha2"] }
cid = { version = "0.11.1", features = ["serde", "std"]}
reqwest = { version = "0.12.5", features = ["json"] }
surrealdb-migrations = "1.5.0"
serde_ipld_dagcbor = "0.6.1"
rocket_db_pools = "0.2.0"
serde_json = "1.0.118"
include_dir = "0.7.3"
thiserror = "1.0.61"
surrealdb = "1.5.3"
did-web = "0.2.2"
base64 = "0.22.1"
serde = "1.0.203"
chrono = "0.4.38"
didkit = "0.6.0"
rocket = "0.5.1"
sha256 = "1.5.0"
sha2 = "0.10.8"
rand = "0.8.5"
hex = "0.4.3"
