[package]
name = "registry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsky-pds = { version = "*", git = "https://github.com/blacksky-algorithms/rsky" }
lexicon_cid = { package = "cid", version = "0.10.1", features = ["serde-codec"] }
did-method-plc = { version = "*", path = "../../libs/did-method-plc" }
reqwest = { version = "0.12.5", features = ["json"] }
serde_bytes = "0.11.15"
serde_json = "1.0.118"
lazy_static = "1.5.0"
serde_cbor = "0.11.2"
thiserror = "1.0.61"
futures = "0.3.28"
did-web = "0.2.2"
base64 = "0.22.1"
serde = "1.0.203"
chrono = "0.4.38"
anyhow = "1.0.90"
regex = "1.11.0"
didkit = "0.6.0"
rocket = "0.5.1"
sha2 = "0.10.8"
rand = "0.8.5"

[dev-dependencies]
actix-rt = "2.10.0"
